<resources>
    <string name="app_name">Apbailar</string>
    <string name="logo">Logo</string>
    <string name="pregunta_a_usuario">pregunta a usuario</string>
    <string name="boton_persona">botón para personas</string>
    <string name="boton_salir">salir</string>
    <string name="persona_bienvenida">div de bienvenida</string>
    <string name="div_de_bienvenida">div de bienvenida</string>
    <string name="salir">salir</string>
    <string name="btn_sin_exp">botón sin exp</string>
    <string name="btn_con_exp">botón con exp</string>
    <string name="volver">volver vista anterior</string>
    <string name="ingresar">botón de ingreso para academias</string>
    <string name="registro">botón de registro para nueva academia</string>
    <string name="etiqueta_identificador">Etiqueta identificador</string>
    <string name="identificador">Cédula o Nit:</string>
    <string name="clave">Contraseña:</string>
    <string name="clave2">Repita contraseña:</string>
    <string name="contrasenia">Contraseña</string>
    <string name="olvido">¿Olvidó la contraseña?</string>
    <string name="boton_academia">botón para academias</string>
    <string name="cedula_vista">Cédula o NIT:</string>
    <string name="nombre">Nombre academia:</string>
    <string name="correo">Correo:</string>
    <string name="btn_guardar">Botón de guardar</string>
</resources>