<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris_claro"
    tools:context=".Ingreso">

    <ImageView
        android:id="@+id/div_academia_ingreso"
        android:layout_width="375dp"
        android:layout_height="200dp"
        android:contentDescription="@string/div_de_bienvenida"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:srcCompat="@drawable/div_academia" />

    <ImageButton
        android:id="@+id/academia_btn_regresar_ingreso"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/volver"
        app:layout_constraintBottom_toBottomOf="@+id/div_academia_ingreso"
        app:layout_constraintEnd_toEndOf="@+id/div_academia_ingreso"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/div_academia_ingreso"
        app:layout_constraintTop_toTopOf="@+id/div_academia_ingreso"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/icono_atras"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/contrasenia"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:background="@drawable/entrada_datos"
        android:ems="10"
        android:fontFamily="@font/tajawal"
        android:hint="@string/contrasenia"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/negro"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etiqueta_clave"
        app:layout_constraintVertical_bias="0.004"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/identificador"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:autofillHints=""
        android:background="@drawable/entrada_datos"
        android:ems="10"
        android:fontFamily="@font/tajawal"
        android:hint="@string/identificador_et"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="@color/negro"
        android:textColorLink="#00FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etiqueta_id"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/etiqueta_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/etiqueta_identificador"
        android:fontFamily="@font/tajawal"
        android:text="@string/identificador"
        android:textColor="@color/negro"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/div_academia_ingreso"
        app:layout_constraintVertical_bias="0.085" />

    <TextView
        android:id="@+id/etiqueta_clave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/tajawal"
        android:text="@string/clave"
        android:textColor="@color/negro"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.248"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identificador"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/ingreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/ingresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contrasenia"
        app:layout_constraintVertical_bias="0.074"
        app:srcCompat="@drawable/ingresar"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/olvido_clave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/tajawal"
        android:shadowColor="@color/rojo"
        android:text="@string/olvido"
        android:textColor="@color/vino"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingreso"
        app:layout_constraintVertical_bias="0.072" />

</androidx.constraintlayout.widget.ConstraintLayout>