<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/dinamicLogo"
        android:layout_width="336dp"
        android:layout_height="108dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044"
        app:srcCompat="@drawable/iconmov" />

    <ImageButton
        android:id="@+id/ir_persona"
        android:layout_width="198dp"
        android:layout_height="336dp"
        android:layout_marginStart="24dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/boton_persona"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83"
        app:srcCompat="@drawable/persona_btn" />

    <ImageButton
        android:id="@+id/ir_academia"
        android:layout_width="190dp"
        android:layout_height="338dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="botón para academias"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.832"
        app:srcCompat="@drawable/academia_btn" />

    <ImageView
        android:id="@+id/preguntaUsuario"
        android:layout_width="396dp"
        android:layout_height="68dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/pregunta_a_usuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dinamicLogo"
        app:layout_constraintVertical_bias="0.044"
        app:srcCompat="@drawable/lineas" />

    <ImageButton
        android:id="@+id/salir"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="352dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/salir"
        app:layout_constraintBottom_toTopOf="@+id/dinamicLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_icon__close_outline_" />

</androidx.constraintlayout.widget.ConstraintLayout>