<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris_claro"
    tools:context=".Registro">


    <ImageView
        android:id="@+id/div_academia_registro"
        android:layout_width="375dp"
        android:layout_height="200dp"
        android:contentDescription="@string/div_de_bienvenida"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:srcCompat="@drawable/div_academia" />

        <ImageButton
        android:id="@+id/academia_btn_regresar_registro"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/volver"
        app:layout_constraintBottom_toBottomOf="@+id/div_academia_registro"
        app:layout_constraintEnd_toEndOf="@+id/div_academia_registro"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/div_academia_registro"
        app:layout_constraintTop_toTopOf="@+id/div_academia_registro"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/icono_atras"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/idVista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/identificador"
        android:fontFamily="@font/tajawal"
        android:text="@string/cedula_vista"
        android:textColor="@color/negro"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/div_academia_registro" />

    <TextView
        android:id="@+id/nombreVista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/nombre"
        android:fontFamily="@font/tajawal"
        android:text="@string/nombre"
        android:textColor="@color/negro"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idRegistro" />

    <TextView
        android:id="@+id/correoVista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/correo"
        android:fontFamily="@font/tajawal"
        android:text="@string/correo"
        android:textColor="@color/negro"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

    <TextView
        android:id="@+id/contraseniaRegis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/clave"
        android:fontFamily="@font/tajawal"
        android:text="@string/clave"
        android:textColor="@color/negro"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correo" />

    <TextView
        android:id="@+id/contraseniaRegis2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/clave2"
        android:fontFamily="@font/tajawal"
        android:text="@string/clave2"
        android:textColor="@color/negro"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseniaR" />

    <EditText
        android:id="@+id/idRegistro"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/entrada_datos"
        android:ems="10"
        android:fontFamily="@font/tajawal"
        android:hint="@string/identificador"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="@color/negro"
        android:textColorLink="#00FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idVista"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/entrada_datos"
        android:ems="10"
        android:fontFamily="@font/tajawal"
        android:hint="@string/nombre"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/negro"
        android:textColorLink="#00FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreVista"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/correo"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/entrada_datos"
        android:ems="10"
        android:fontFamily="@font/tajawal"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/negro"
        android:textColorLink="#00FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correoVista"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/contraseniaR"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/entrada_datos"
        android:ems="10"
        android:fontFamily="@font/tajawal"
        android:hint="@string/clave"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/negro"
        android:textColorLink="#00FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseniaRegis"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/contraseniaR2"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/entrada_datos"
        android:ems="10"
        android:fontFamily="@font/tajawal"
        android:hint="@string/clave"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/negro"
        android:textColorLink="#00FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseniaRegis2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-90dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/btn_guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseniaR2"
        app:srcCompat="@drawable/guardar"
        tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>